--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,11 @@
     "minimum-stability": "dev",
     "require": {
       "symfony/dom-crawler": "2.8.2",
-      "symfony/css-selector": "2.8.2",
-      "wykleph/curl": "0.11.0",
-        "symfony/var-dumper": "2.8.2"
+      "symfony/css-selector": "2.8.2"
     },
   "autoload": {
     "psr-4": {
       "Wykleph\\HtmlScraper\\": "",
-      "Wykleph\\Curler\\": "vendor/wykleph/curl",
       "Symfony\\Component\\DomCrawler\\": "vendor/symfony/dom-crawler"
     }
   }
